--- a/packages/assets/scss/02-molecules/_error-list.scss
+++ b/packages/assets/scss/02-molecules/_error-list.scss
@@ -77,6 +77,10 @@
     background-color: var(--mf-c-error-red-lightest);
     border-color: var(--mf-c-bd-error);
     color: var(--mf-c-font-error);
+    // High contrast mode error visibility
+    @media (forced-colors: active) {
+      color: Mark;
+    }
   }
 
   &__title {
@@ -87,5 +91,9 @@
     border-color: var(--mf-c-bd-error);
     color: var(--mf-c-font-error);
     font-weight: $fonts-light;
+    // High contrast mode error visibility
+    @media (forced-colors: active) {
+      color: Mark;
+    }
   }
 }
